recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: illegal start of simple expression
	if (steps == 0=){
                       ^Tree:12: error: ')' expected but '}' found.
	}
        ^