recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	setCouleur(current(step))
	baisseCrayon()
	if (steps == 0=){
		return
	}
	else{
		avance(length:Double)
		droite(angle:Double)
		return ( steps -1 , shrink*length, angle , shrink)}
	}
